[package]
name = "counter-parser"
version = "0.1.0"
edition = "2021"
authors = ["Rob Glossop <robgssp@gmail.com>"]

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
simple-error = "*"
logos = "0.12"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
rand = "0.8"
clap = { version = "3.2.5", features = ["derive"] }
